# ai-marketplace-monitor

./: README.md  amazon_laptop_filters.json  amazon_laptop_monitor.py  amazon_mac_32gb_filters.json  bestbuy_laptop_filters.json  bestbuy_laptop_monitor.py  monitor.py  prompt_log.txt  pyproject.toml  run.bat  run.sh  run_amazon_common.bat  run_amazon_gpu16.bat  run_amazon_mac32.bat  run_bestbuy.bat  run_facebook.bat
docs/: README.md  ai-workflow-notes.md  configuration-guide.rst  installation.rst  linux-installation.md  quickstart.rst  troubleshooting.rst  usage.rst  webui.md
src/ai_marketplace_monitor/: ai.py  cli.py  config.toml  email_notify.py  facebook.py  listing.py  marketplace.py  monitor.py  notification.py  user.py  utils.py
tests/: test_ai.py  test_aimm.py  test_cli.py  test_notification.py
